--- a/MovieMate/requirements.txt
+++ b/MovieMate/requirements.txt
@@ -1,5 +1,4 @@
-
-# Use this .txt file to install streamlit
-streamlit
-
--e .
+Requests==2.31.0
+setuptools==68.2.2
+setuptools==68.0.0
+streamlit==1.33.0
